<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/constraint_overview">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/launch_image"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintWidth_max="150dp"
                app:layout_constraintHeight_max="150dp"
                tools:layout_height="150dp"
                tools:layout_width="150dp"
                tools:src="@color/black"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:orientation="vertical"
                android:layout_marginStart="7dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="@id/launch_image"
                app:layout_constraintBottom_toBottomOf="@id/launch_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/launch_image">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="22sp"
                    android:id="@+id/mission_name"
                    android:textStyle="bold"
                    tools:text="Mission Name"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:layout_marginVertical="5dp"
                    android:textStyle="normal"
                    android:id="@+id/launch_year"
                    tools:text="@string/launch_year"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:layout_marginVertical="5dp"
                    android:textStyle="normal"
                    android:id="@+id/flight_number"
                    tools:text="@string/flight_number"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            android:layout_below="@id/constraint_overview">

            <View
                android:layout_marginHorizontal="2dp"
                android:layout_marginVertical="14dp"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/launch_details"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_marginStart="7dp"
                android:id="@+id/details"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/rocket_name"
                android:layout_marginStart="7dp"
                tools:text="@string/rocket_name"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:layout_marginVertical="5dp"
                android:textStyle="normal"
                android:id="@+id/rocket_type"
                android:layout_marginStart="7dp"
                tools:text="@string/rocket_type"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/launch_site"
                android:layout_marginStart="7dp"
                tools:text="@string/launch_site"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/launch_date"
                android:layout_marginStart="7dp"
                tools:text="@string/launch_date"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/last_update"
                android:layout_marginStart="7dp"
                tools:text="@string/last_update"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/additional_links"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:linksClickable="true"
                android:autoLink="web"
                android:id="@+id/reddit_link"
                android:layout_marginStart="7dp"
                tools:text="@string/reddit_link"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/article_link"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_marginStart="7dp"
                tools:text="@string/article_link"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/wiki_link"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_marginStart="7dp"
                tools:text="@string/wiki_link"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:id="@+id/video_link"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_marginStart="7dp"
                tools:text="@string/video_link"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>